syntax = "proto3";

package fitnesse.mcp.proto;

option java_package = "fitnesse.mcp.proto";
option java_outer_classname = "FitnesseMcpProto";
option java_multiple_files = true;

import "vertx-grpc/options.proto";

service FitnesseMcp {
  option (vertx.grpc.service) = true;
  rpc Health(HealthRequest) returns (HealthResponse);
  rpc ListResources(ListResourcesRequest) returns (ListResourcesResponse);
  rpc ReadPage(ReadPageRequest) returns (ReadPageResponse);
  rpc Search(SearchRequest) returns (SearchResponse);
}

message HealthRequest {}

message HealthResponse {
  string status = 1;
}

message ListResourcesRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message Resource {
  string id = 1;
  string name = 2;
  string uri = 3;
  string type = 4;
}

message ListResourcesResponse {
  repeated Resource resources = 1;
  int32 total = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message ReadPageRequest {
  string path = 1;
}

message ReadPageResponse {
  bool found = 1;
  string path = 2;
  string name = 3;
  string content = 4;
  string lastModified = 5;
  string error = 6;
}

message SearchRequest {
  string query = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message SearchResult {
  string path = 1;
  string snippet = 2;
}

message SearchResponse {
  repeated SearchResult results = 1;
  int32 limit = 2;
  int32 offset = 3;
}
